# tools

./: .gitignore  .gitmodules  .mailmap  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  config.yaml  pyproject.toml  run-tests  setup.cfg  setup.py  sr_complete
.circleci/: config.yml
bom/: bom.py  bom_header.inc  cachedfetch.py  create-order  create_bom  create_bom.py  digikey  digikey.py  eagle.py  eagle_ver  eagle_ver.py  export-gerber  export_eagle_bom  export_eagle_bom.sh  farnell  farnell.py  geda.py  parts_db.py  parts_parser.py  pcb_lint  price-graph  rs  rs.py  schem.py  srBeautifulSoup.py  sr_component_lib  sr_lint  stockcheck  threadpool.py
docs/: Makefile  api.rst  conf.py  config.example.yaml  configuration.rst  development.rst  index.rst  installation.rst  inventory.rst  make.bat  requirements.txt  usage.rst
docs/api/: modules.rst  sr.rst  sr.tools.bom.rst  sr.tools.budget.rst  sr.tools.cli.bom.rst  sr.tools.cli.budget.rst  sr.tools.cli.git.rst  sr.tools.cli.gschem.rst  sr.tools.cli.ide.rst  sr.tools.cli.inventory.rst  sr.tools.cli.misc.rst  sr.tools.cli.pcb.rst  sr.tools.cli.rst  sr.tools.cli.spending.rst  sr.tools.cli.trac.rst  sr.tools.inventory.rst  sr.tools.rst  sr.tools.spending.rst  sr.tools.teamgit.rst  sr.tools.trac.rst
docs/commands/: budget-check.rst  budget-close.rst  budget-diff.rst  budget-eval.rst  budget-query.rst  budget-tree.rst  cam-serial.rst  check-my-git.rst  clone-team.rst  clone.rst  cog-team.rst  cog.rst  comp-calculate-league-matches.rst  create-bom.rst  create-order.rst  digikey.rst  document.rst  export-gerber.rst  farnell.rst  geda-hierpcb.rst  help.rst  ide-list-repos.rst  ide-list-teams.rst  ide-version.rst  index.rst  inv-edit.rst  inv-findpart.rst  inv-history.rst  inv-list-assy-templates.rst  inv-list-templates.rst  inv-mv.rst  inv-new-asset.rst  inv-new-group.rst  inv-query.rst  inv-show.rst  (+33 more)
fwman/: fwman
git/: check-my-git  cog  repolist
gschem/: symbol-correct.py
inventory/: assetcode.py  inv-findpart  inv-list-assy-templates  inv-list-templates  inv-new-asset  inv-new-group  inv-show  inv-showparent  inv-sync-asset  inv-touch  inventory.py
pcb/: geda-hierpcb  pcb-to-thou
python/: config.py
script/: check
sr/: __init__.py  cli.py  config.py
sric/: sric-ls
tests/: test_command_list.py  test_environment.py
var/: spend-template.yaml
wrapper/: _list_cmds  git_repos.py  sitepackage.py  sr  sr_commands.py  sr_complete  update
(+313 files in other folders)
