[metadata]
name = sr.tools
version = attr: sr.tools.__version__
description = attr: sr.tools.__description__
keywords = sr student robotics tools utilities utils
url = https://github.com/srobo/tools
project_urls =
    Code = https://github.com/srobo/tools
    Documentation = https://srtools.readthedocs.io/en/latest/
    Issue tracker = https://github.com/srobo/tools/issues
long_description_content_type = text/x-rst
long_description = file: README.rst
author = Student Robotics
author_email = info@studentrobotics.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[options]
include_package_data = True
zip_safe = False
packages = find:
namespace_packages =
    sr
install_requires =
    PyYAML >=5, <7
    pyparsing >=2.0, <3
    BeautifulSoup4 >=4.3, <5
    numpy >=1.9, <2
    requests >=2.9, <3
    six >=1.9, <2
    tabulate >=0.7, <1
    xlwt-future >=0.8, <1

[options.entry_points]
console_scripts =
    sr = sr.tools.cli:main

[options.extras_require]
cam-serial =
    pyudev
mcv4b-part-code =
    pyudev
price-graph =
    matplotlib
save-passwords =
    keyring

[options.packages.find]
exclude =
    tests
    tests.*


[build_sphinx]
builder = man


[flake8]
exclude =
    .eggs,
    .git,
    .pybuild,
    __pycache__,
    build,
    script
per-file-ignores =
    setup.py:E501
ignore =
    # W503 and W504 conflict; pick the one that looks better
    W504

# try to keep it below 85, but this allows us to push it a bit when needed.
max_line_length = 90


[isort]
atomic = True
balanced_wrapping = True
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
order_by_type = False
float_to_top = True

known_first_party = sr
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
